updated phone number to unique and changes service unavailable status code.